# triplog-app

./: README.md
backend/: .env.example  .gitignore  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: asgi.py  urls.py  wsgi.py
backend/api/exceptions/: exception_handler.py
backend/api/models/: base_model.py
backend/api/serializers/: __init__.py  base_serializer.py
backend/api/settings/: __init__.py  base.py  development.py  production.py
backend/api/utils/: pagination.py
backend/apps/accounts/: urls.py
backend/apps/accounts/filters/: user_filter.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/models/: profile_model.py  user_model.py
backend/apps/accounts/serializers/: profile_serializer.py  user_serializer.py
backend/apps/accounts/views/: profile_view.py  user_view.py
backend/apps/trip/: urls.py
backend/apps/trip/migrations/: 0001_initial.py
backend/apps/trip/models/: __init__.py  trip_log_models.py  trip_models.py  trip_route_models.py
backend/apps/trip/serializers/: trip_log_serializer.py  trip_route_serializer.py  trip_serializer.py
backend/apps/trip/utils/: ors_utils.py  trip_utils.py
backend/apps/trip/views/: trip_log_view.py  trip_route_view.py  trip_view.py
frontend/: .env.example  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/assets/: leaflet.css
frontend/src/components/: app-logo.tsx  icons.tsx  rounded-element.tsx  silk.tsx
frontend/src/config/: constants.ts  menu.ts
frontend/src/data/: use-geosearch.ts  use-trip-data.ts
frontend/src/hooks/: use-auth.ts  use-debounce.ts  use-document-title.ts  use-theme.ts
frontend/src/lib/: auth-provider.tsx  conditional-rendering.tsx  cookie-manager.ts  theme-provider.tsx  utils.ts
frontend/src/pages/: about.tsx  home.tsx  not-found.tsx  trip.tsx
frontend/src/routes/: api-routes.ts  auth-routes.tsx  router.tsx  web-routes.tsx
(+55 files in other folders)
