[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "dj-rest-auth[with-social]==6.0.0",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.11",
    "openrouteservice>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "shapely>=2.1.2",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused import
  "F403", # stars import
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.isort]
length-sort = true
known-local-folder = ["backend", "apps"]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "migrations"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
